--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div>
                     <img src="img/saludm.jpg" alt="">
-                    <a href="servicios.html" > Servicios de escuha</a>
+                    <a href="servicios.html" > Servicios de escucha</a>
                 </div>
             </div>
         </header>
