--- a/quienessomos.html
+++ b/quienessomos.html
@@ -70,13 +70,13 @@
             <div class = "service">
                 <div class ="mision">
                     <img src="img/paint.jpg" class= "imgmis">
-                    <h3>Mision</h3>
+                    <h3>Misión</h3>
                     <p> Brindar a los padres de familia y cuidadores la tranquilidad de que sus niños están aprendiendo y desarrollándose sanamente
                     por medio de estrategias de exploración y estimulación, todo desde la comodidad de su hogar.</p>
                 </div>
                 <div class ="vision">
                     <img src="img/littlebear.jpg" class= "imgvis">
-                    <h3>Vision</h3>
+                    <h3>Visión</h3>
                     <p>Dar niñeras mantiene una proyección de ser una de las plataformas de acompañamiento infantil pioneras e innovadoras de Colombia
                     en adaptar la tecnología a favor de niños y padres, donde se pueda mantener el monitoreo de las actividades que realizan desde diferentes
                     lugares donde los padres se encuentren ubicados dando la seguridad y la tranquilidad que ellos necesitan.</p>
